--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     </div>
     <div class="card-footer">
-        <button class="btn btn-primary float-right m-2" type="submit">cancel</button>
+        <button class="btn btn-secondary float-right m-2" type="submit">cancel</button>
         <button class="btn btn-primary float-right m-2" type="submit">Send</button>
     </div>
     </div>
